# todo-board-scalable-systems

./: README.md
backend/: .gitignore  Cargo.toml
backend/migrations/2025-04-30-112500_create_todos/: up.sql
backend/src/: main.rs  models.rs  schema.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
