[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
reqwest = "0.12.15"

serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.44.2", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql"] }
diesel-async = { version = "0.3.1", features = ["mysql"] }
dotenvy = "0.15"
